package be.intecbrussel.shoppinglist.model.notyet;

import be.intecbrussel.shoppinglist.model.Food;
import jakarta.persistence.Entity;
import jakarta.persistence.JoinColumn;
import jakarta.persistence.ManyToOne;
import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.EqualsAndHashCode;
import lombok.NoArgsConstructor;

@EqualsAndHashCode(callSuper = true)
@NoArgsConstructor
@AllArgsConstructor
@Data //Combines @Getter, @Setter, @ToString, @EqualsAndHashCode, @RequiredArgsConstructor
@Entity
public class FoodIngredient extends Food {
    double quantity;
    @ManyToOne
    @JoinColumn(name = "ingredient_id")
    Food ingredient;
}
